--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 /* Header section */
 #header {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), #009688), url(assets/banner.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), #009688), url(banner.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
